syntax = "proto3";

message Simple {
  string name = 1;
  int32 age = 2;
  repeated string children = 3;
}

message AnotherSimple {
  float num = 1;
  string str = 2;
}
